Issue #611: added new StreamingSessionIdentifier type combining client side session ID and server side session ID in order to always ensure a unique actor name for the StreamingSessionActor
Signed-off-by: Thomas Jaeckle <thomas.jaeckle@bosch.io>